# midi2vid

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
config/: default.json
midi2vid/: config.py  video_generator.py
midi2vid.egg-info/: PKG-INFO  SOURCES.txt
midi2vid/config/: default.json
src/: config.py  main.py  utils.py
src/midi2vid/: download_soundfont.py  main.py  midi_preprocessor.py  note_animation.py  utils.py  video_generator.py
src/midi2vid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/video_generator/: config.py  midi_preprocessor.py  note_animation.py  piano.py  video_generator.py
test/: test_config.py  test_midi_player.py
