[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "midi2vid"
version = "0.1.0"
dependencies = ["mido==1.3.2", "pygame==2.6.1", "gdown==5.2.0"]
requires-python = ">=3.10,<3.11"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
select = [
    "E",
    "F", # pyflakes
    "B",
    "I", # imports
    "N", # names
]
line-length = 80
indent-width = 2

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
