[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "midi2vid"
version = "0.1.0"
dependencies = [
    "mido==1.3.2",
    "pygame==2.6.1",
    "gdown==5.2.0",
    "midiutils @ git+ssh://git@github.com/pianoviz/midiutils.git",
    "midi2hands @ file:///Users/oscar/pro/midi2hands",
]
requires-python = ">=3.10,<3.11"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

# run the project with:
# midi2vid --source_path=file.midi --output_path=out.mp4 --config default.json
[project.scripts]
midi2vid = "midi2vid.main:commandline_main"

[tool.ruff]
select = [
    "E", # errors
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # imports
    "N", # names
    "D", # docstrings
]
line-length = 80
indent-width = 2

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
