[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "midi2vid"
version = "0.0.1"
description = "Simple and fast library to convert midi files to video"
readme = "README.md"
authors = [{ name = "Oscar Andersson", email = "oscar.966484@gmail.com" }]
license = "MIT"
dependencies = [
    "mido==1.3.2",
    "pygame==2.6.1",
    "gdown==5.2.0",
    "midiutils @ git+https://github.com/pianoviz/midiutils.git",
    "midi2hands @ git+https://github.com/pianoviz/midi2hands.git",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

# run the project with:
# midi2vid --source_path=file.midi --output_path=out.mp4 --config default.json
[project.scripts]
midi2vid = "midi2vid.main:commandline_main"

[tool.ruff]
select = [
    "E", # errors
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # imports
    "N", # names
    # "D", # docstrings
]
line-length = 80
indent-width = 2

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
